v1.3.2 - 2021-11-08t19:10	Leomar Duran <https://github.com/lduran2>
	fixer.js: optimized the 'this' emphasis to replace original text

v1.3.1 - 2021-11-08t19:10	Leomar Duran <https://github.com/lduran2>
	fixer.js: appended text to the heading of the knowledge list

v1.3.0 - 2021-11-08t19:04	Leomar Duran <https://github.com/lduran2>
	fixer.js: found the heading of the knowledge list

v1.2.0 - 2021-11-08t18:37	Leomar Duran <https://github.com/lduran2>
	fixer.js: change the class of the ordered list

v1.1.0 - 2021-11-08t18:27	Leomar Duran <https://github.com/lduran2>
	fixer.js: added emphasis to all 'this' the main title

v1.0.2 - 2021-11-08t17:31	Leomar Duran <https://github.com/lduran2>
	fixer.js: size the Mars image

v1.0.1 - 2021-11-08t17:31	Leomar Duran <https://github.com/lduran2>
	fixer.js: set the image source to Mars

v1.0.0 - 2021-11-08t17:04	Leomar Duran <https://github.com/lduran2>
	fixer.js: loaded the Mars image and alerted a confirmation message